# rs-weathercli

./: .gitignore  Cargo.toml
src/: main.rs
weatherapi/: Cargo.toml
weatherapi/src/: lib.rs
