[package]
name = "cliweather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
ureq = { version = "2.9.1", features = ["json"] }

weatherapi = { path = "./weatherapi" }
